--- a/src/App.scss
+++ b/src/App.scss
@@ -1,106 +1,94 @@
-.container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background: #ea910b;
-  font-family: "Audiowide", monospace;
+$button: #4d4d4d;
+@import "https://fonts.googleapis.com/css?family=Share+Tech+Mono";
+@font-face {
+  font-family: "Digital";
+  src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot");
+  src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.svg#Digital-7")
+      format("svg");
 }
 
-.machine {
-  max-width: 800px;
-  width: 100%;
+#app {
+  height: 100vh;
   display: flex;
-  background: #111;
-  margin: 50px;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 5px 5px 8px 3px #333;
-}
-
-.pads {
-  display: flex;
-  flex-wrap: wrap;
-  width: 60%;
-}
-
-.outer-drum-pad {
-  width: 120px;
-  height: 120px;
-  background: #1ec8ce;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  margin: 10px;
+  justify-content: center;
 }
 
-.drum-pad {
-  width: 97%;
-  height: 97%;
-  background: radial-gradient(#333, #070707);
-  border-radius: 50%;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 120px;
-  font-size: 24px;
-  color: rgba(255, 255, 255, 0);
-  cursor: pointer;
-  &:hover {
-    color: rgba(255, 255, 255, 1);
-  }
+body {
+  background: #c2c2d6;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
-.side-panel {
-  height: 100%;
-  width: 40%;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: white;
-  text-align: center;
-  font-size: 20px;
-}
-
-.label {
-  color: white;
-  font-style: italic;
-  text-align: center;
-  font-size: 24px;
-}
-
-.display {
-  width: 200px;
-  height: 20px;
-  margin: 20px auto;
+.calculator {
+  border: 2px solid #47476b;
   padding: 5px;
-  font-size: 20px;
-  background: #1ec8ce;
-  border: 2px solid #333;
-  border-radius: 3px;
-  color: #111;
+  background: black;
+  width: 320px;
+  position: relative;
 }
 
-.speakers {
-  width: 100%;
-  padding: 20px;
-  hr {
-    background: #000;
-    width: 90%;
-    height: 9px;
-    margin: 15px 0;
-    border: none;
-  }
+.formulaScreen {
+  min-height: 20px;
+  font-family: digital;
+  font-size: 20px;
+  color: orange;
+  text-align: right;
+  vertical-align: text-top;
+  line-height: 20px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+.outputScreen {
+  font-size: 29px;
+  font-family: digital;
+  color: white;
+  text-align: right;
+  line-height: 35px;
 }
 
 button {
-  background: green;
-  width: 40px;
-  height: 20px;
-  margin: 10px 0 5px;
-  cursor: pointer;
+  position: relative;
+  height: 65px;
+  width: 80px;
+  color: white;
+  outline: 1px solid black;
+  border: none;
+  background: $button;
+  font-family: Share Tech Mono, monospace;
+  font-size: 20px;
+  cursor: default;
+  &:hover {
+    color: black;
+    outline: 0.05em solid grey;
+    z-index: 3;
+  }
 }
 
-input {
-  margin: 10px;
+.jumbo {
+  width: 160px;
+}
+
+.author {
+  text-align: center;
+  font-family: Share Tech Mono, sans;
+  margin-top: 15px;
+  a {
+    text-decoration: none;
+    color: #00264d;
+    line-height: 26px;
+  }
 }
